--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
     implementation("androidx.fragment:fragment-ktx:1.3.6")
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
+    implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
+
 
 }
