--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation("androidx.cardview:cardview:1.0.0")
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
@@ -68,5 +68,6 @@ dependencies {
 
     implementation "com.squareup.retrofit2:converter-moshi:2.4.0"
 
+    implementation 'com.github.heremaps:oksse:0.9.0'
 
 }
