--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.4.21"
-        // NOTE: Do not place your application dependencies here; they belong
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.7.1.1"        // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
